--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div class="app-component">
-  <h1>{{title}}</h1>
-</div>
+<h1>{{title}}</h1>
+<app-heroes></app-heroes>
