--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<h1>{{title}}</h1>
-<app-heroes></app-heroes>
+<header>
+  <h1>{{title}}</h1>
+</header>
+<main>
+  <app-heroes></app-heroes>
+  <app-messages></app-messages>
+</main>
